added link and link style

--- a/style.css
+++ b/style.css
@@ -29,3 +29,15 @@ footer {
     text-align: center;
     margin: auto;
 }
+
+.footer-link a {
+    display: inline-block;
+    text-decoration: none;
+    color: rgb(209, 201, 201);
+    margin-top: 5px;
+    padding: 5px;
+}
+
+.footer-link a:hover {
+    color: #fff;;
+}
